# starelements

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  create-release.yml  release.yml
examples/: counter.py  waveform_editor.py
examples/codemirror/: editor.py
scripts/: build.py  hatch_build_hook.py  minify.py
src/starelements/: __init__.py  cli.py  core.py  decorator.py  factory.py  generator.py  integration.py  props.py  signals.py
src/starelements/bundler/: __init__.py  binary.py  bundle.py  config.py  fetcher.py  lock.py  minify.py
src/starelements/static/: starelements.js  starelements.min.js
src/starelements/static/js/: @codemirror__state.bundle.js  codemirror.bundle.js
tests/: __init__.py  test_binary.py  test_bundle.py  test_cli.py  test_config.py  test_core.py  test_decorator.py  test_e2e_bundle.py  test_factory.py  test_fetcher.py  test_generator.py  test_integration.py  test_lock.py  test_minify.py  test_props.py  test_register.py  test_runtime.py  test_signals.py  test_validation.py
typescript/: datastar.d.ts  starelements.ts  tsconfig.json
