[project]
name = "starelements"
version = "0.1.0"
description = "Python-native web components for StarHTML/Datastar"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "starhtml",
    "httpx>=0.27",
    "platformdirs>=4.0",
]

[project.scripts]
starelements = "starelements.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.uv.sources]
starhtml = { path = "../starhtml-upstream", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/starelements"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
