[project]
name = "starelements"
version = "0.1.0"
description = "Python-native web components for starHTML/Datastar"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "starhtml>=0.5.3",
    "platformdirs>=4.0",
]

[project.scripts]
starelements = "starelements.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=6.1.1"]
dev = ["ruff", "pyright", "pip-tools"]

[build-system]
requires = ["hatchling", "httpx>=0.27", "platformdirs>=4.0"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build_hook.py"

[tool.hatch.build.targets.wheel]
packages = ["src/starelements"]
# Include only Python and built static assets (exclude TypeScript sources)
include = [
    "src/starelements/**/*.py",
    "src/starelements/static/**/*.js",
]
# Build artifacts (JavaScript) will be added dynamically by the build hook
artifacts = []
exclude = [
    "typescript/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C90", "PL"]
ignore = [
    "E501",    # line length (handled by formatter)
    "E701",    # multiple statements on one line
    "PLR0913", # too many arguments
    "C901",    # too complex
    "N802",    # function name lowercase (FT constructors)
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "PLC0415", # import not at top-level (lazy imports to avoid circular deps)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F403", "F405", "PLR2004", "N806", "F841", "PLC0415"]
"examples/*.py" = ["F403", "F405", "PLR2004", "N802", "PLW0603", "E402", "F841", "PLC0415"]
"src/starelements/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
